ltdl wrappers now use a recursive mutex.

Fixes <https://bugs.gnu.org/29275>.
Reported by noxdafox <noxdafox@gmail.com>.

* libguile/dynl.c (scm_init_dynamic_linking): Add call to
'scm_i_pthread_mutex_init'.